[package]
name = "streamed-ratatui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
color-eyre = "0.6"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
tui-textarea = "0.7"
